<package>
  <name>gmm_utils</name>
  <version>0.1.0</version>
  <description>
    This packace contains utility packages for the gmm
  </description>
  <maintainer email="keith@lirmm.fr">Francois Keith</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>robohow_common_msgs</build_depend>
  <run_depend>robohow_common_msgs</run_depend>
</package>

