<package>
  <name>motion_viz</name>
  <version>0.1.0</version>
  <description>
    visualization tools for twists, jacobians and virtual kinematic chains.
  </description>
  <maintainer email="kresse@in.tum.de">Ingo Kresse</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend> 
<!--
  <depend package="geometry_msgs"/>
  <depend package="robohow_common_msgs"/>
  <depend package="rospy"/>
  <depend package="kdl"/>
-->
</package>
